# dalvik

./: .gitignore  .travis.yml  SSATest.hs  dalvik.cabal  runTests.sh  stack-7.10.yaml  stack-7.8.yaml
Dalvik/: Instruction.hs  SSA.hs  Types.hs
Dalvik/SSA/: BasicBlocks.hs  Labelling.hs  Types.hs
scripts/: fetch-android-sdk.sh
src/Dalvik/: AccessFlags.hs  Apk.hs  ClassHierarchy.hs  ClassName.hs  Instruction.hs  LEB128.hs  MUTF8.hs  Parser.hs  Printer.hs  SSA.hs  Types.hs
src/Dalvik/SSA/: BasicBlocks.hs  ClassHierarchy.hs  Labeling.hs  StringUtils.hs  Types.hs  Util.hs
src/Dalvik/SSA/Internal/: BasicBlocks.hs  Labeling.hs  Names.hs  Pretty.hs  RegisterAssignment.hs  Serialize.hs  Stubs.hs
tests/roundtrip/: CreateChooser.apk  Main.hs  core.dex  framework.dex
tests/ssa/: Dump.hs  SSALabels.hs
tests/ssa-tests/: Main.hs
tests/ssa/Tests/Dalvik/: DexLoaders.hs  Labels.hs  NameDecoding.hs  SSA.hs
tests/testfiles/javaInputs/: LabelTests.java  Test.java
tests/testfiles/ssa-tests/: ConditionalInts.java  ConditionalInts.java.expected  ConditionalStringsAssigned.java  ConditionalStringsAssigned.java.expected  ConditionalStringsReturned.java  ConditionalStringsReturned.java.expected  EliminateUnreachableCatch.java  EnsureExceptionBlock.java  EnsureExceptionBlock.java.expected  NestedLoop.java  NestedLoop.java.expected  OneUnusedPhi.java  OneUnusedPhi.java.expected  SimpleLoop.java  SimpleLoop.java.expected  ThreeIncomingValues.java  ThreeIncomingValues.java.expected  Trivial.java  Trivial.java.expected  TwoPhis.java  TwoPhis.java.expected
tools/Dexdumper/: Main.hs
tools/SSADumper/: Main.hs
