Name:           dalvik
Version:        0.1
Cabal-Version:  >= 1.10
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      LICENSE
Author:         Aaron Tomb <aarontomb@gmail.com>
Maintainer:     aarontomb@gmail.com
Stability:      experimental
Synopsis:       Parser for the Dalvik virtual machine's DEX file format
Description:    Parser for the Dalvik virtual machine's DEX file format
Category:       Language

Library
    default-language: Haskell2010
    Extensions:

    Build-Depends:  base >= 3,
                    attoparsec,
                    bytestring >= 0.9,
                    cereal,
                    conduit >= 1,
                    containers,
                    failure >= 0.2.0,
                    floatshow,
                    IntervalMap,
                    wl-pprint,
                    text,
                    transformers >= 0.3,
                    unordered-containers,
                    semigroups,
                    hashable < 1.2,
                    vector >= 0.10,
                    zip-conduit,
-- needed for test code (test dependencies aren't available in the repl)
                    temporary,
                    process,
                    filepath,
                    directory

    Hs-Source-Dirs: src
    Exposed-Modules: Dalvik.AccessFlags
                     Dalvik.Apk
                     Dalvik.ClassHierarchy
                     Dalvik.DebugInfo
                     Dalvik.Instruction
                     Dalvik.LEB128
                     Dalvik.MUTF8,
                     Dalvik.Parser
                     Dalvik.Printer
                     Dalvik.SSA
                     Dalvik.Types
                     Dalvik.SSA.Internal.BasicBlocks,
                     Dalvik.SSA.Internal.Labeling,
                     Dalvik.SSA.Internal.Names,
                     Dalvik.SSA.Internal.Pretty,
                     Dalvik.SSA.Internal.RegisterAssignment,
                     Dalvik.SSA.ClassHierarchy,
                     Dalvik.SSA.Types,
                     Dalvik.SSA.Util
    GHC-Options: -Wall -O1
    GHC-Prof-Options: -prof -fprof-auto -fprof-cafs

Executable Dexdumper
  default-language: Haskell2010
  build-depends: base == 4.*,
                 bytestring,
                 containers,
                 dalvik
  hs-source-dirs: tools/Dexdumper
  Main-Is: Main.hs
  GHC-Options: -Wall -O1
  GHC-Prof-Options: -prof -fprof-auto -fprof-cafs -rtsopts -auto-all

executable SSADumper
  default-language: Haskell2010
  build-depends: base == 4.*,
                 dalvik,
                 filepath,
                 process,
                 temporary,
                 directory,
                 bytestring,
                 optparse-applicative,
                 containers
  main-is: Main.hs
  hs-source-dirs: tests/ssa, tools/SSADumper
  ghc-options: -Wall -O1 -rtsopts
  ghc-prof-options: -prof -auto-all

test-suite SSALabels
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: SSALabels.hs
  ghc-options: -Wall -O1
  ghc-prof-options: -prof -auto-all
  hs-source-dirs: tests/ssa
  build-depends: base == 4.*,
                 containers,
                 HUnit,
                 test-framework,
                 test-framework-hunit,
                 dalvik == 0.1,
                 temporary,
                 process,
                 filepath,
                 directory,
                 bytestring