Name:           dalvik
Version:        0.2.1.1
Cabal-Version:  >= 1.10
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      LICENSE
Author:         Aaron Tomb <aarontomb@gmail.com>
Maintainer:     aarontomb@gmail.com
Stability:      experimental
Synopsis:       Parser for the Dalvik virtual machine's DEX file format
Description:    Parser for the Dalvik virtual machine's DEX file format
Category:       Language

Library
    default-language: Haskell2010
    Extensions:

    Build-Depends:  base >= 4 && < 5,
                    attoparsec >= 0.10.0.0 && < 0.12,
                    bytestring >= 0.9,
                    cereal,
                    conduit >= 1,
                    containers,
                    exceptions >= 0.5 && < 0.6,
                    floatshow,
                    IntervalMap >= 0.3.0.0,
                    prettyclass >= 1,
                    pretty-show,
                    text,
                    transformers >= 0.3,
                    unordered-containers >= 0.2.3.0,
                    semigroups >= 0.5,
                    hashable < 1.3,
                    vector >= 0.10,
                    zip-conduit,
                    split >= 0.2,
-- needed for test code (test dependencies aren't available in the repl)
                    temporary,
                    process,
                    filepath,
                    directory

    Hs-Source-Dirs: src
    Exposed-Modules: Dalvik.AccessFlags
                     Dalvik.Apk
                     Dalvik.ClassHierarchy
                     Dalvik.ClassName
                     Dalvik.DebugInfo
                     Dalvik.Instruction
                     Dalvik.LEB128
                     Dalvik.MUTF8,
                     Dalvik.Parser
                     Dalvik.Printer
                     Dalvik.SSA
                     Dalvik.Types
                     Dalvik.SSA.Internal.BasicBlocks,
                     Dalvik.SSA.Internal.Labeling,
                     Dalvik.SSA.Internal.Names,
                     Dalvik.SSA.Internal.Pretty,
                     Dalvik.SSA.Internal.RegisterAssignment,
                     Dalvik.SSA.Internal.Stubs,
                     Dalvik.SSA.ClassHierarchy,
                     Dalvik.SSA.StringUtils,
                     Dalvik.SSA.Types,
                     Dalvik.SSA.Util
    GHC-Options: -Wall -O1
    GHC-Prof-Options: -prof -fprof-auto -fprof-cafs

Executable Dexdumper
  default-language: Haskell2010
  build-depends: base == 4.*,
                 bytestring,
                 containers,
                 dalvik
  hs-source-dirs: tools/Dexdumper
  Main-Is: Main.hs
  GHC-Options: -Wall -O1
  GHC-Prof-Options: -prof -fprof-auto -fprof-cafs -rtsopts -auto-all

executable SSADumper
  default-language: Haskell2010
  build-depends: base == 4.*,
                 dalvik,
                 filepath,
                 process,
                 temporary,
                 directory,
                 bytestring,
                 optparse-applicative,
                 containers
  main-is: Main.hs
  hs-source-dirs: tests/ssa, tools/SSADumper
  ghc-options: -Wall -O1 -rtsopts
  ghc-prof-options: -prof -auto-all

test-suite ssa-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests/ssa-tests
  ghc-options: -Wall -O1
  build-depends: base == 4.*,
                 dalvik,
                 containers,
                 HUnit,
                 test-framework,
                 test-framework-hunit,
                 filepath,
                 filemanip >= 0.3.6,
                 bytestring,
                 failure

test-suite SSALabels
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: SSALabels.hs
  ghc-options: -Wall -O1
  ghc-prof-options: -prof -auto-all
  hs-source-dirs: tests/ssa
  build-depends: base == 4.*,
                 containers,
                 HUnit,
                 test-framework,
                 test-framework-hunit,
                 dalvik,
                 temporary,
                 process,
                 filepath,
                 directory,
                 bytestring

-- test-suite stubs
--   default-language: Haskell2010
--   type: exitcode-stdio-1.0
--   main-is: stubs.hs
--   ghc-options: -Wall
--   ghc-prof-options: -prof -auto-all
--   hs-source-dirs: tests/stubs
--   build-depends: base == 4.*,
--                  HUnit,
--                  test-framework,
--                  test-framework-hunit,
--                  dalvik == 0.2.0.0