Name:           dalvik
Version:        0.4.0.0
Cabal-Version:  >= 1.10
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      LICENSE
Author:         Aaron Tomb <aarontomb@gmail.com>
Maintainer:     aarontomb@gmail.com
Stability:      experimental
Synopsis:       Parser for the Dalvik virtual machine's DEX file format
Description:    Parser for the Dalvik virtual machine's DEX file format
Category:       Language

Library
    default-language: Haskell2010
    Extensions:

    Build-Depends:  base >= 4 && < 5,
                    containers,
                    attoparsec >= 0.10.0.0 && < 0.13,
                    cereal >= 0.4 && < 0.5,
                    bytestring >= 0.9 && < 2,
                    text >= 0.11 && < 2,
                    zip-archive >= 0.2.3.2 && < 0.3,
                    exceptions >= 0.5 && < 0.7,
                    floatshow >= 0.2.4 && < 0.3,
                    IntervalMap >= 0.3.0.0 && < 0.4,
                    GenericPretty >= 1.2 && < 1.3,
                    pretty,
                    transformers >= 0.3 && < 0.5,
                    unordered-containers >= 0.2.3.0 && < 0.3,
                    semigroups >= 0.5,
                    vector >= 0.10 && < 2,
                    split >= 0.2 && < 0.3,
                    hashable,
                    pretty-show,
-- needed for test code (test dependencies aren't available in the repl)
                    temporary >= 1.2.0.3 && < 2,
                    process,
                    filepath,
                    directory

    Hs-Source-Dirs: src
    Exposed-Modules: Dalvik.AccessFlags,
                     Dalvik.Apk,
                     Dalvik.ClassHierarchy,
                     Dalvik.ClassName,
                     Dalvik.DebugInfo,
                     Dalvik.Instruction,
                     Dalvik.LEB128
                     Dalvik.MUTF8,
                     Dalvik.Parser,
                     Dalvik.Printer,
                     Dalvik.SSA,
                     Dalvik.Types,
                     Dalvik.SSA.Internal.BasicBlocks,
                     Dalvik.SSA.Internal.Labeling,
                     Dalvik.SSA.Internal.Names,
                     Dalvik.SSA.Internal.Pretty,
                     Dalvik.SSA.Internal.RegisterAssignment,
                     Dalvik.SSA.Internal.Serialize,
                     Dalvik.SSA.Internal.Stubs,
                     Dalvik.SSA.ClassHierarchy,
                     Dalvik.SSA.StringUtils,
                     Dalvik.SSA.Types,
                     Dalvik.SSA.Util
    -- The simpl-tick-factor flag is a workaround for ghc 7.8
    GHC-Options: -Wall -O1 -fsimpl-tick-factor=500000
    GHC-Prof-Options: -prof -fprof-auto -fprof-cafs  -fsimpl-tick-factor=500000

Executable Dexdumper
  default-language: Haskell2010
  build-depends: base == 4.*,
                 bytestring,
                 containers,
                 dalvik
  hs-source-dirs: tools/Dexdumper
  Main-Is: Main.hs
  GHC-Options: -Wall -O1
  GHC-Prof-Options: -prof -fprof-auto -fprof-cafs -rtsopts -auto-all

executable SSADumper
  default-language: Haskell2010
  build-depends: base == 4.*,
                 dalvik,
                 filepath,
                 process,
                 temporary,
                 directory,
                 bytestring,
                 optparse-applicative >= 0.7 && < 1,
                 containers
  main-is: Main.hs
  hs-source-dirs: tests/ssa, tools/SSADumper
  ghc-options: -Wall -O1 -rtsopts
  ghc-prof-options: -prof -auto-all

test-suite ssa-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests/ssa-tests
  ghc-options: -Wall -O1
  build-depends: base == 4.*,
                 dalvik,
                 containers,
                 HUnit,
                 test-framework,
                 test-framework-hunit,
                 filepath,
                 filemanip >= 0.3.6,
                 bytestring,
                 failure

test-suite SSALabels
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: SSALabels.hs
  ghc-options: -Wall -O1
  ghc-prof-options: -prof -auto-all
  hs-source-dirs: tests/ssa
  build-depends: base == 4.*,
                 containers,
                 HUnit,
                 test-framework,
                 test-framework-hunit,
                 dalvik,
                 temporary,
                 process,
                 filepath,
                 directory,
                 bytestring

test-suite roundtrip
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests/roundtrip
  ghc-options: -Wall -O
  build-depends: base,
                 bytestring,
                 containers,
                 HUnit,
                 test-framework,
                 test-framework-hunit,
                 dalvik
